--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,42 @@
 {
-  "extends": "next/core-web-vitals"
+    "env": {
+        "node": true,
+        "browser": true,
+        "es2021": true,
+        "jest": true
+    },
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:prettier/recommended",
+        "plugin:react-hooks/recommended",
+        "plugin:@next/next/recommended"
+    ],
+    "parserOptions": {
+        "ecmaFeatures": {
+            "jsx": true
+        },
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "plugins": [
+        "react",
+        "react-hooks"
+    ],
+    "rules": {
+        "react/react-in-jsx-scope": "off",
+        "react/prop-types": 0,
+        "no-debugger": "off",
+        "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+        "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
+        // "next/link-passhref": true
+    },
+    "globals": {
+        "process": true
+    },
+    "settings": {
+        "react": {
+            "version": "18.2.0"
+        }
+    }
 }
