--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "cookies-js": "^1.2.3",
     "framer-motion": "^7.2.0",
+    "magic-sdk": "^9.0.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
