--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "classnames": "^2.3.1",
     "cookies-js": "^1.2.3",
     "framer-motion": "^7.2.0",
     "magic-sdk": "^9.0.0",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-modal": "^3.15.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.2.5",
