--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-modal": "^3.15.1"
+    "react-modal": "^3.15.1",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.2.5",
