--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "cookies-js": "^1.2.3",
     "framer-motion": "^7.2.0",
     "magic-sdk": "^9.0.0",
-    "next": "12.2.5",
+    "next": "^12.2.6-canary.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.15.1",
